user tests reviewed

--- a/report/brugertests.tex
+++ b/report/brugertests.tex
@@ -1,12 +1,16 @@
 \section{Samarbejde med brugere}
-Igennem hele prjektet har vi haft stort fokus på at lytte til vores brugere og lave det, som de har brug for. Vi har været i kontakt med to forskellige brugere, dog kun meget lidt med bruger 2. Optimalt ville vi gerne have haft input fra flere brugere. Dette blev ikke en realitet, men ville fremtidigt kunne give en værdi for appen hvis udført.
+Projektets testgruppe har været bestående at to brugere. Den første bruger er en kvinde på 59 år, som gennem mange år har haft styr på sin køkkenhave på papir, og det er efterhånden en stor stak papirer, som hun skal holde styr på. Denne bruger er fremadrettet under kaldenavnet ``Bruger 1''.
 
-Allerede inden projektet startede havde vi en samtale med bruger 1 for at afdække behov. Denne samtale lagde udgangspunktet for vores kravspecifikation og problemformulering.
+Den anden bruger er en mand på 68 år, som også har egen køkkenhave. Han går fremadrettet under navnet ``Bruger 2''.
+
+Igennem hele prjektet har vi haft stort fokus på at lytte til vores brugere og lave det, som de har brug for. Vi har været i kontakt med begge brugere, dog kun meget lidt med bruger 2. Optimalt ville vi gerne have haft input fra flere brugere. Dette blev ikke en realitet, men ville fremtidigt kunne give værdi for appen hvis udført.
+
+Allerede inden projektet startede havde vi en samtale med bruger 1 for at afdække hendes behov. Denne samtale lagde udgangspunktet for vores kravspecifikation og problemformulering.
 
 Derudover har vi brugt bruger 1 til at observere hendes arbejdspraksis i forhold til at holde styr på sædskifte og anden organisering i køkkenhaven. Dette har vi taget meget udgangspunkt i, da vi ikke selv har erfaring med den praktiske del af en køkkenhave, men blot det teoretiske, vi har læst os frem til.
 
 \subsection{Brugertests}
-Vi har igennem udviklingsprocessen af appen udført 6 brugertests med 2 forskellige brugere. Der er blevet udført brugertests efter følgende sprints med følgende brugere:
+Vi har igennem udviklingsprocessen af appen udført seks brugertests med de to brugere. Der er blevet udført brugertests efter følgende sprints med følgende brugere:
 \begin{itemize}
     \item Efter sprint 2 - Bruger 1
     \item Efter sprint 5 - Bruger 1
@@ -18,49 +22,46 @@ Vi har igennem udviklingsprocessen af appen udført 6 brugertests med 2 forskell
 Undervejs i vores brugertests fandt vi bugs, fejl, mangler og uklarheder. Vi fandt også ud af hvilke ting, der var vigtige at holde fast i og som fungerede godt. De nedenstående afsnit går mere i dybden med de enkelte brugertests, men indeholder stadig kun de vigtigste erfaringer, vi gjorde os.
 
 \subsubsection{Brugertest 1}
-Ved den første brugertest, sammen med bruger 1, efter sprint 2, var der ikke meget funktionalitet endnu. Brugertesten foregik ved, at vi forklarede den overordnede idé med appen, samt at den var langt fra færdig, og lod derefter brugeren prøve appen selv. Det gav alligevel anledning til ændringer. Brugeren var meget forvirret over, hvorfor hun ikke kunne tilføje flere bede. Det blev dermed tydeligt, at vores navngivning af forskellige dele af en have ikke var korrekt, og at det, vi havde kaldt et "haveområde", skulle omdøbes til et "bed". Den ønskede funktionalitet fra brugeren var nemlig allerede implementeret, men ikke intuitiv.
+Ved den første brugertest, sammen med bruger 1, efter sprint 2, var der ikke meget funktionalitet endnu. Brugertesten foregik ved, at vi forklarede den overordnede idé med appen, samt at den var langt fra færdig, og lod derefter brugeren prøve appen selv. Det gav alligevel anledning til ændringer. Brugeren var meget forvirret over, hvorfor hun ikke kunne tilføje flere bede. Det blev dermed tydeligt, at vores navngivning af forskellige dele af en have ikke var korrekt i forhold til brugerens definitioner, og at det, vi havde kaldt et ``haveområde'', skulle omdøbes til et ``bed''. Den ønskede funktionalitet fra brugeren var nemlig allerede implementeret, men ikke intuitiv nok til at hun kunne finde den.
 
 \subsubsection{Brugertest 2}
+Ved den anden brugertest, sammen med bruger 1, efter sprint 5, blev brugertesten udført som en tænke-højt-test. En af hovedpointerne var, at der skulle flere forklaringer til siderne. Hun var lidt forvirret over hvad, hun skulle på den enkelte side i mange tilfælde, så det valgte vi at fokusere på at gøre mere tydeligt fremadrettet.
 
-Ved den anden brugertest, sammen med bruger 1, efter sprint 5, blev brugertesten udført som en tænke-højt-test. En af hovedpointerne var, at der skulle flere forklainger til siderne. Hun var lidt forvirret over hvad, hun skulle på den enkelte side i mange tilfælde, så det valgte vi at fokusere på at gøre mere tydeligt fremadrettet.
+Brugeren efterspurgte også at kunne indtaste personlige notater til planter --- f.eks. sort, hvilken leverandør der er blevet brugt og andre ting til den pågældende plante. Dette havde vi ikke tænkt over før, men blev senere en stor værdi for vores app, da den løftede appen fra at være låst til de behov, som vi havde tænkt opfyldt, til at kunne favne alle behov. Hvis brugeren savnede en værdi for en given plante, kunne de altid bruge notesfeltet til selv at holde styr på ønsket i stedet. I samme forbindelse gav det også mening senere at implementere muligheden for at lave sine egne planter, hvilket brugeren også gav ønske om. På samme måde ville det løfte appen fra at have en fast mængde planter til at kunne holde styr på alle planter, som brugeren holder eller ønsker at have informationen samlet omkring.
 
-Brugeren efterspurgte også at kunne indtaste personlige notater til planter - f.eks. sort, hvilken leverandør der er blevet brugt og andre ting til den pågældende plante. Dette havde vi ikke tænkt over før, men blev senere en stor værdi i vores app, da den løftede appen fra at være ensformig for alle til at kunne favne alle behov --- hvis brugeren savnede en funktionalitet, kunne de altid bruge notesfeltet til selv at holde styr på ønsket i stedet. I samme forbindelse gav det også mening senere at implementere muligheden for at lave sine egne planter, hvilket brugeren også gav ønske om. På samme måde ville det løfte appen fra at have en fast mængde planter til at kunne holde styr på alle planter, der findes.
+Der blev også kommenteret på vores valg af ikoner, som hun syntes var lidt forvirrende og derfor ikke helt vidste, hvad de refererede til. Her var det primært vores udendørs-ikon, som blev forvekslet med en have og ikke så meget en køkkenhave, og brugeren troede derfor ikke, hun kunne lave et køkkenhave-bed før hun læste titlerne til hvert ikon. Dette gjorde os opmærksom på vigtigheden af ikoner, og især at hvis man vælger at bruge ikoner, skal de også virkelig forestille det, der er meningen --- ellers forvirrer de mere end de gavner.
 
-Der blev også kommenteret på vores valg af ikoner, som hun syntes var lidt forvirrende og derfor ikke helt vidste, hvad de refererede til. Her var det primært vores udendørs-ikon, som blev forvekslet med en have og ikke så meget en køkkenhave, og brugeren troede derfor ikke, hun kunne lave et køkkenhave-bed før hun læste titlerne til hvert ikon. Dette gjorde os opmærksom på vigtigheden af ikoner, og især at hvis man vælger at bruge ikoner, skal de også virkelig forestille det, der er meningen --- ellers gør de ingen gavn.
+Efter brugertesten snakkede vi om frø-poser, som gav idéen til at indsætte billeder i appen. Denne idé er udfoldet i vores refleksion (afsnit \ref{image-analysis}).
 
-Efter brugertesten snakkede vi om frø-poser, som gav idéen til at indsætte billeder i appen. Denne idé er udfoldet i afsnittet refleksion under Image analysis.
-
-Generelt gav den brugertest os en stor indsigt i, hvor vigtigt forklaring og sigende ikoner er, samt hvor meget mere en app kan bruges til, hvis man lader brugeren skabe indhold selv.
+Generelt gav denne brugertest os en stor indsigt i, hvor vigtigt forklaring og sigende ikoner er, samt hvor meget mere en app kan bruges til, hvis man lader brugeren skabe indhold selv.
 
 \subsubsection{Brugertest 3}
 
-Ved tredje brugertest med bruger 1 efter sprint 7, blev der gjort udtryk for, at brugeren gerne ville have nogle specifikke oplysninger lettere tilgængeligt. Specifikke oplysninger om hver enkelt plante i et bed, såsom vanding eller forspring, skulle stå som det første, når man trykkede på en plante frem for at have en ekstra knap 'Detaljer'. Det blev senere besluttet på baggrund heraf, at det var helt unødvendigt, at have en 'Detaljer' - alle specifikke oplysninger skulle stå i dialog-boksen, og alle mere overordnede informationer skulle kun være i leksikonet, som kunne linkes til fra dialogen. Det, at brugeren ville have visse oplysninger fremhævet, tolkede vi dermed som, at de andre oplysninger ikke gav værdi, at have samme sted.
+Ved tredje brugertest med bruger 1 efter sprint 7, blev der gjort udtryk for, at brugeren gerne ville have nogle specifikke oplysninger lettere tilgængeligt. Specifikke oplysninger om hver enkelt plante i et bed, såsom vanding eller forspring, skulle stå som det første, når man trykkede på en plante frem for at have en ekstra knap ``Detaljer''. Det blev senere besluttet på baggrund heraf, at det var helt unødvendigt, at have en ``Detaljer'' --- alle specifikke oplysninger skulle stå i dialog-boksen, og alle mere overordnede informationer skulle kun være i leksikonnet, som kunne linkes til fra dialogen. Det, at brugeren ville have visse oplysninger fremhævet, tolkede vi dermed som, at de andre oplysninger ikke gav værdi, at have samme sted.
 
 Brugeren var forvirret over måden, som et bed blev illustreret på, fordi hver række i et bed var kvadratiske. Til det foreslog hun, at et bed blev lavet mere aflangt på den ene led, så det blev tydeligt, at hver firkant var en række (eller en del af en række) og ikke et bed. Hun tilføjede herudover, at hun godt kunne tænke sig, at der var plads til minimum fem rækker / kolonner på hver led i et bed. Begge dele implementerede vi senere hen.
 
-Vi opdagede, at et af de skærmbilleder, som brugeren kom til, når hun skulle oprette et nyt bed, ikke var lavet til skærmstørrelsen på hendes telefon, da den var mindre end de skærmstørrelser, vi havde testet på, og noget af teksten blev derfor ikke vist. Efter denne opdagelse begyndte vi at teste på mindste skærmstørrelse med minimum API 23, for at sikre en god brugeroplevelse for alle, der kan køre appen.
+Vi opdagede, at et af de skærmbilleder, som brugeren kom til, når hun skulle oprette et nyt bed, ikke var lavet til skærmstørrelsen på hendes telefon, da den var mindre end de skærmstørrelser, vi havde testet på, og noget af teksten blev derfor ikke vist. Efter denne opdagelse begyndte vi at teste på en emulator der var tilsvarende bruger 1's telefon i forhold til skærmstørrelse og version af Android, for at sikre en god brugeroplevelse for alle, der kan køre appen.
 
-Brugeren var forvirret over vores måde at vise plantbare planter på og syntes, der manglede forklaring. På det tidspunkt fungerede det ved, at hvis et bed havde tomme felter, foreslog appen nogle planter, der var sæson for lige nu, som man derefter kunne trykke på for at så. Hun påpegede, at det ikke gav så meget mening, at man kunne plante en ny plante direkte i bedet med det samme, da man jo vil så de frø man har. Appen skal derimod give noget information på forhånd, man kan reagere på senere. Den tankegang tog vi meget til os, og vores fremadrettede syn på appen blev, at den skulle fungere som visualisering af mange informationer frem for at håndtere og styre alt for dig.
+Brugeren var forvirret over vores måde at vise planter, som kan plantes, på og syntes, der manglede forklaring. På det tidspunkt fungerede det ved, at hvis et bed havde tomme felter, foreslog appen nogle planter, der var sæson for lige nu, som man derefter kunne trykke på for at så. Hun påpegede, at det ikke gav så meget mening, at man kunne plante en ny plante direkte i bedet med det samme, da man vil så de frø man har, og ikke hvad appen giver dig af idéer. Appen skal derimod give noget information på forhånd, man kan reagere på senere. Den tankegang tog vi meget til os, og vores fremadrettede syn på appen blev, at den skulle fungere som visualisering af mange informationer frem for at håndtere og styre alt for dig.
 
 \subsubsection{Brugertest 4}
+Denne brugertest var mere spontan og i samarbejde med bruger 2 efter sprint 7. Brugeren gav udtryk for, at det ikke var tydeligt hvad, et bed repræsenterede --- det var indforstået. Han ønskede en forklaring til hvad et bed er defineret som i appen. Her kunne man også lave en forklaring til hele appen generelt, så brugeren også fik en forståelse for andre dele. Denne mangel kan kobles til, da vi under første brugertest opdagede, at vi ikke havde brugt det rigtige fagterm for et bed, men bare kaldt det et ``område''. Dette ændrede vi straks med tanken på, at brugerne var de bedrevidende, uden at tænke på, at det ikke nødvendigvis er alle fremtidige brugere af appen, der endnu har opbygget et fagligt ordforråd om køkkenhaver. Det endte derfor med, at appen fik en forklaring på bede generelt samt appens opbygning.
 
-Denne brugertest var mere spontan og i samarbejde med bruger 2 efter sprint 7. Brugeren gav udtryk for, at det ikke var tydeligt hvad, et bed repræsenterede - det var indforstået. Han ønskede en forklaring til hvad et bed er defineret som i appen. Her kunne man også lave en forklaring til hele appen generelt, så brugeren også fik en forståelse for andre dele. Denne mangel kan kobles til, da vi under første brugertest opdagede, at vi ikke havde brugt det rigtige fagterm for et bed, men bare kaldt det et "område". Dette ændrede vi straks med tanken på, at brugerne var de bedrevidende, uden at tænke på, at det ikke nødvendigvis er alle fremtidige brugere af appen, der endnu har opbygget et fagligt ordforråd om køkkenhaver. Det endte derfor med, at appen fik en forklaring på bede generelt samt appens opbygning.
-
-Brugeren gjorde også udtyk for, at det kunne være en god idé at lade brugeren styre så mange inddelinger af under-bede, som de ønsker, således at det ikke er forhåndsbestemt, hvor mange niveauer man ønsker at underinddele sin køkkenhave i. Dette implementerede vi ikke, men er beskrevet under fremtidige udvidelser.
+Brugeren gjorde også udtryk for, at det kunne være en god idé at lade brugeren styre så mange inddelinger af under-bede, som de ønsker, således at det ikke er forhåndsbestemt, hvor mange niveauer man ønsker at underinddele sin køkkenhave i. Dette implementerede vi ikke, men er beskrevet under fremtidige udvidelser (afsnit \ref{gruppering-af-bede}).
 
 Han kunne godt tænke sig noget hjælp til hvordan man kunne lave specielle former af bed, hvis ens bed nu for eksempel var rundt og ikke firkantet. Det kunne godt virke som om, appen kun kunne bruges, hvis du havde en firkantet køkkenhave. Dette tilføjede vi til tooltippet.
 
 \subsubsection{Brugertest 5}
-Denne brugertest blev udført efter sprint 9 med bruger 1. Efter dette sprint havde vi implementeret en vejr-data side med det formål, at vise brugeren hvornår appen havde registreret, at det sidst havde regnet, samt hvilken lokation, den havde taget udgangspunkt i. Brugeren ønskede at se yderligere informationer såsom hvor mange mm regn, der var faldet på en regnsvejrsdag, hvad vejrdataet skulle bruges til og hvordan appen vurderede om det talte som en regnvejrsdag. Dette går igen hånd i hånd med idéen om, at appen ikke skal fortælle dig, hvad du skal gøre, men snarere give dig et solidt beslutningsgrundlag. Det krævede i dette tilfælde mere information til brugeren.
+Denne brugertest blev udført efter sprint 9 med bruger 1. Efter dette sprint havde vi implementeret en vejrdata-side med det formål, at vise brugeren hvornår appen havde registreret, at det sidst havde regnet, samt hvilken lokation, den havde taget udgangspunkt i. Brugeren ønskede at se yderligere informationer såsom hvor mange millimeter regn, der var faldet på en regnsvejrsdag, hvad vejrdataet skulle bruges til og hvordan appen vurderede om det talte som en regnvejrsdag. Dette går igen hånd i hånd med idéen om, at appen ikke skal fortælle dig, hvad du skal gøre, men snarere give dig et solidt beslutningsgrundlag. Det krævede i dette tilfælde mere information til brugeren.
 
 Brugeren gjorde os også opmærksom på, at man som oftest ønsker at tilføje flere planter af samme type i sit bed, og at det derfor kunne give mening at sortere listen af planter på senest tilføjet, favorit-planter eller lignende. Denne idé er også udfoldet i fremtidige udvidelser.
 
-I denne brugertest ønskede brugeren at kunne inddele sine bede i områder. Dette ønske minder meget om pointen fra bruger 2 i forrige brugertest, om at det kunne give mening, at lade brugeren inddele bede så mange gange som de ønsker (beskrevet i fremtidige udvidelser).
+I denne brugertest ønskede brugeren at kunne inddele sine bede i områder. Dette ønske minder meget om pointen fra bruger 2 i forrige brugertest, om at det kunne give mening, at lade brugeren inddele bede så mange gange som de ønsker (beskrevet i fremtidige udvidelser, afsnit \ref{gruppering-af-bede}).
 
-Brugeren foreslog at appen måske skulle starte med en oversigt over alle sæsoner. Dette fravalgte vi dog at gøre, da vi kunne se, at brugeren som regel kun ønskede at kigge på bede for den nuværende sæson. Vi vurderede derfor, at der i stedet var brug for en bedre forklaring i vores tool-tip på forsiden, men at den stadig skulle starte på bedene i den nyeste sæson oprettet.
+Brugeren foreslog at appen måske skulle starte med en oversigt over alle sæsoner. Dette fravalgte vi dog at gøre, da vi kunne se, at brugeren som regel kun ønskede at kigge på bede for den nuværende sæson. Vi vurderede derfor, at der i stedet var brug for en bedre forklaring i vores tooltip på forsiden, men at den stadig skulle starte på bedene i den nyeste sæson oprettet.
 
 \subsubsection{Brugertest 6}
 Denne brugertest blev udført efter code freeze med bruger 1. Selvom, vi ikke skulle kode mere på projektet i denne omgang, gav det mening at vide, hvilke punkter, brugeren var tilfreds med samt hvilke, der kunne forbedres --- brugeres behov ændrer sig hele tiden.
 
 Generelt var brugeren meget tilfreds med appen. De ting vi havde lavet, syntes hun var blevet gode. Der var stadig flere features, hun kunne ønske sig i fremtiden, samt småjusteringer af formuleringer og lignende, men alt i alt sad vi tilbage med en tilfreds bruger.
-
