--- a/report/future.tex
+++ b/report/future.tex
@@ -4,6 +4,7 @@ Gennem projektet nåede vi alt i backloggen, som det også fremgik i vores burn-
 \subsection{Ikoner til alle planter}
 Nogle mennesker orienterer sig meget visuelt, og her ville det give god mening, hvis hver enkelt plante havde et ikon knyttet til sig. Da dette kobler sig meget til datagrundlaget, vurderede vi, at det ikke gav mening at bruge tid på at finde hvert eneklt ikon til hver af de planter, vi havde fra vores data. Det ville være oplagt at have data, der allerede havde knyttet et ikon til sig. Alternativt ville det være meget tidskrævende, at finde ikoner samt skalere og farve dem. Det vurderede vi ikke gav mening i forhold til vores nuværende tidsramme, især når der heller ikke var nogen brugertests, der fremhævede manglen. I en fremtidig version af appen, ville det måske give mening at få et samarbejde, der kunne levere alt data herunder ikoner. 
 
+\label{gruppering-af-bede}
 \subsection{Inddelig og gruppering af bede}
 Baseret på brugertestene beskrevet tidligere, var der ønske om en større inddeling af bede. Det ville derfor være oplagt at implementere i en fremtidig version. Dette ønske vurderede vi ikke, der var tid til at implementere på en optimal måde, da ønskerne først kom efter sprint 7 ud af 12. Hvis man kigger på vores burn-up chart fra afsnittet om processen, lader det til at være en god beslutning, da vi først nåede i mål med vores backlog i sidste sprint, kun med få story points mindre end andre sprints.
 
