--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -1,3 +1,4 @@
+\label{refleksion}
 \section{Refleksion}
 
 \subsection{Indledende forventninger}
@@ -59,6 +60,7 @@ Den anden løsning blev fravalgt, da der skulle meget arbejde til at få server 
 \subsubsection{Sædskifteinterval}
 Jævnfør problemformuleringen opfyldte vi dette krav. I forhold til vores egne forvetninger, derimod, blev det implemeteret på en helt anden måde. Det datagrundlag, vi fandt, samt det, vi læste om sædskifte (INDSÆT REFERENCE HER) informerede os om vigtighigheden heraf og hvordan det er forskelligt fra plante til plante. Derfor havde vi først troet, at vi skulle visualisere alle planter i alle bed i forhold til sædskifte. Efter en observation af bruger 1's nuværende måde at holde styr på sædskifte samt en forklarende snak med hende, fandt vi dog frem til, at det giver bedre mening at holde styr på sædskifte på bed-niveau. Man vil som oftest så planter af samme familie i samme bed og rotere hele bede for at undgå udpining af jorden. Derfor ændrede vi vores måde at anskue hele featuren til at give et overblik over hvor længe et bed har været på samme plads, hvor det tidligere har været samt hvornår det igen kan plantes på en tidligere position ifølge den type plante i bedet, der har største sædskifteinterval.
 
+\label{image-analysis}
 \subsubsection{Image analysis}
 Vi havde snakket om, at implementere brug af image analysis til at hjælpe brugeren med at oprette sin have i appen ved blot at tage et billede af den. Dette vurderede vi ikke ville give værdi for brugeren da:
 \begin{enumerate}
