--- a/report/appendix.tex
+++ b/report/appendix.tex
@@ -1,5 +1,7 @@
 \section{Bilag}
+
 \subsection{Styleguide}
+\label{styleguide}
 
 \subsubsection*{Skrifttyper}
 
@@ -13,37 +15,36 @@ Appen bruger skrifttypen Roboto Condensed \footcite{roboto-condensed} til al tek
 \end{figure}
 
 \subsubsection*{Farver}
-
 Farverne tager udgangspunkt i farver som man tit møder, når man arbejder med planter. F.eks. repræsenterer grøn planter og jordfarverne potter og jord.
 
-Begge farveskemaer er udvalgt af en professionel xxxx, og vi har valgt at bruge det øverste, for at have lidt varmere toner i appen.
+Begge farveskemaer er udvalgt af en professionel Creative Lead hos firmaet Unknown. Vi har valgt at bruge det øverste, for at have lidt varmere toner i appen.
 
 \begin{figure}[H]
     \label{farver}
     \centering
-    \includegraphics[width=0.7\textwidth]{img/colors.png}
+    \includegraphics[width=0.9\textwidth]{img/colors.png}
     \caption{Appfarver}
 \end{figure}
 
 \subsubsection*{Textstørrelser}
 
 \begin{itemize}
-    \item 10
-    \item 16
-    \item 24
-    \item 36
+    \item Small: 16sp
+    \item Medium: 24sp
+    \item Large: 28sp
 \end{itemize}
 
 \subsubsection*{Padding og margener}
 
 \begin{itemize}
-    \item 5
-    \item 10
-    \item 15
-    \item 20
+    \item Xsmall: 5dp
+    \item Small: 10dp
+    \item Medium: 20dp
+    \item Large: 40dp
 \end{itemize}
 
 \subsection{Sketches}
+\label{sketches}
 
 \includegraphics[width=1\textwidth]{img/s1-1.jpg}\\
 \includegraphics[width=1\textwidth]{img/s1-3.jpg}\\
@@ -52,6 +53,7 @@ Begge farveskemaer er udvalgt af en professionel xxxx, og vi har valgt at bruge 
 \includegraphics[width=1\textwidth]{img/s1-9.jpg}\\
 
 \subsection{Wireframes}
+\label{wireframes}
 
 \begin{itemize}
     \item Navigationen er altid synlig i bunden af skærmen for hurtigt at kunne skife mellem og gå tilbage til forskellige dele af appen
@@ -66,13 +68,13 @@ Begge farveskemaer er udvalgt af en professionel xxxx, og vi har valgt at bruge 
     \item Kun ikoner på overblikket af planter for et nemt overblik
 \end{itemize}
 
-\includegraphics[width=0.5\textwidth]{img/s1-2.jpg}\\
+\includegraphics[width=0.4\textwidth]{img/s1-2.jpg}\\
 
 \begin{itemize}
     \item Detajleview hvis man vil vide mere (wiki knap) eller se mere om plantens status
 \end{itemize}
 
-\includegraphics[width=0.5\textwidth]{img/s1-6.jpg}\\
+\includegraphics[width=0.4\textwidth]{img/s1-6.jpg}\\
 
 \begin{itemize}
     \item Popup til at udføre "hurtige actions" og for at undgå for mange knapper på griddet så det bliver uoverskueligt og småt
