Meeting with Sebastian

--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -84,6 +84,6 @@ Mange a produkterne beskrevet i de to underafsnit foroven, ville i fremtiden kun
 
 Sebastian fortalte, at mange af de mere præcise og avancerede IoT-enheder ofte kun bliver brugt til professionelt landbrug, da de er for dyre og specialicerede at bruge hjemme i en køkkenhave. Priserne er dog på vej ned, men der går alligevel et stykke tid, før det giver mening for en hobbyist at anskaffe sig IoT måleinstrumenter. De fleste produkter til en betalelig pris på markedet lige nu, se bilag XX, vil være upræcise, og det vil derfor i langt de fleste tilfælde være langt mere sigende blot at kigge til planterne selv. F.eks. kan placeringen af en sensor i jorden have stor betydning for resultatet af målingen.
 
-Sebastian kom derudover med en pointe om, at automatiserede systemer kan gå imod idéen med at have en køkkenhave. Han tror at de mennesker, som holder sin egen køkkenhave, inklusiv ham selv, har det som en hobby --- hvis man derfor begynder at automatisere hele processen med at have en køkkenhave, kan meget af glæden gå af at passe sin have og sine planter, da hobbyen næsten ikke kommer til udtryk i dit liv. Dette udspurgte vi vores to brugere omkring. Her svarede de XX.
+Sebastian kom derudover med en pointe om, at automatiserede systemer kan gå imod idéen med at have en køkkenhave. Han tror at de mennesker, som holder sin egen køkkenhave, inklusiv ham selv, har det som en hobby --- hvis man derfor begynder at automatisere hele processen med at have en køkkenhave, kan meget af glæden gå af at passe sin have og sine planter, da hobbyen næsten ikke kommer til udtryk i dit liv. Dette udspurgte vi vores to brugere omkring. Her svarede bruger 1, at hun kun var delvis enig og godt kunne tænkte sig automatisering til en vis grad. Det tyder på at det kan være meget forskelligt, og det ville derfor være nødvendigt at lave mange brugertests for at afdække behovet og ønsket.
 
 Vi vurderede derfor, at hvis vi i fremtiden ønsker at inkludere data fra IoT-enheder, vil det sandsynligvis give bedst mening at have til formål at vise brugeren hvad, der foregår i deres køkkenhave, frem for præcis hvilken handling, de skal udføre eller en fuldstændig automatisering.
