--- a/report/appendix.tex
+++ b/report/appendix.tex
@@ -63,7 +63,7 @@ Begge farveskemaer er udvalgt af en professionel Creative Lead hos firmaet Unkno
 
 \begin{itemize}
     \item Grid frem for liste for overblik over hvor planterne er
-    \item Store områder bliver indelt i "sider" som man kan bladre imellem, fordi brugeren er vant til at swipe frem for at scrolle til siden
+    \item Store områder bliver indelt i ``sider'' som man kan bladre imellem, fordi brugeren er vant til at swipe frem for at scrolle til siden
     \item Det bliver inddelt i områder, så brugeren selv kan dele haven op, som de ønsker
     \item Kun ikoner på overblikket af planter for et nemt overblik
 \end{itemize}
@@ -77,7 +77,7 @@ Begge farveskemaer er udvalgt af en professionel Creative Lead hos firmaet Unkno
 \includegraphics[width=0.4\textwidth]{img/s1-6.jpg}\\
 
 \begin{itemize}
-    \item Popup til at udføre "hurtige actions" og for at undgå for mange knapper på griddet så det bliver uoverskueligt og småt
+    \item Popup til at udføre ``hurtige actions'' og for at undgå for mange knapper på griddet så det bliver uoverskueligt og småt
 \end{itemize}
 
 \includegraphics[width=0.5\textwidth]{img/s1-10.jpg}\\
@@ -94,5 +94,3 @@ Begge farveskemaer er udvalgt af en professionel Creative Lead hos firmaet Unkno
     \item Man kan tilføje og slette rækker og kolonner for at gøre plads til flere eller færre planter
     \item Man kan hive en plantekasse eller potte ned på griddet for at indikere at der er noget her
 \end{itemize}
-
-
