--- a/report/bib.bib
+++ b/report/bib.bib
@@ -1,92 +1,92 @@
-@article {
+@online {
     fragments,
     title = {Fragments},
     url = {https://developer.android.com/guide/fragments},
-    year = {2020}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     viewmodel,
     title = {Viewmodel overview},
     url = {https://developer.android.com/topic/libraries/architecture/viewmodel},
-    year = {2020}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     navigation,
     title = {Navigation},
     url = {https://developer.android.com/guide/navigation},
-    year = {2020}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     constraint,
     title = {ConstraintLayout},
     url = {https://developer.android.com/reference/androidx/constraintlayout/widget/ConstraintLayout},
-    year = {2020}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     imagebutton,
     title = {ImageButton},
     url = {https://developer.android.com/reference/android/widget/ImageButton},
-    year = {2020}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     fonts,
     title = {Fonts in XML},
     url = {https://developer.android.com/guide/topics/ui/look-and-feel/fonts-in-xml},
-    year = {2020}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     uitest,
     title = {Test UI for a single app},
     url = {https://developer.android.com/training/testing/ui-testing/espresso-testing},
-    year = {2020}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     roboto-condensed,
     title = {Roboto Condensed},
     url = {https://fonts.google.com/specimen/Roboto+Condensed},
-    year = {2021}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     dmi-api,
     title = {DMI's Offentlige API},
     url = {https://confluence.govcloud.dk/display/FDAPI},
-    year = {2021}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     app-bar,
     title = {Regular top app bar},
     url = {https://material.io/components/app-bars-top/android#regular-top-app-bar},
-    year = {2021}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     navigation-drawer,
     title = {Navigation Drawer},
     url = {https://material.io/components/navigation-drawer/android},
-    year = {2021}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     balloon-library,
     title = {Skydoves - Balloon},
     url = {https://github.com/skydoves/Balloon},
-    year = {2021}
+    urldate = {2021-05-10}
 }
 
-@article {
+@online {
     aarstiderne,
     title = {Aarstidernes plante- og så-kalender},
-    url = {https://issuu.com/aarstiderne\_com/docs/aarstidernes-plante-og-saa-kalender},
-    year = {2021}
+    url = {https://issuu.com/aarstiderne_com/docs/aarstidernes-plante-og-saa-kalender},
+    urldate = {2021-05-10}
 }
 
 @book {
@@ -97,14 +97,23 @@
     year = {2019}
 }
 
-@article {
+@online {
     coolors,
     title = {Coolors.co},
-    url = {https://coolors.co}
+    url = {https://coolors.co},
+    urldate = {2021-05-10}
 }
 
-@article {
-    gardena,
-    title = {Det smarte havearbejde},
-    url = {https://www.gardena.com/dk/produkter/smart/}
+@online {
+    opencsv,
+    title = {OpenCSV},
+    url = {http://opencsv.sourceforge.net/},
+    urldate = {2021-05-10}
+}
+
+@online {
+    room,
+    title = {Room Database},
+    url = {https://developer.android.com/training/data-storage/room/#database},
+    urldate = {2021-05-10}
 }
