--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -8,7 +8,7 @@
 \usepackage{listings}
 \usepackage{enumitem}
 \usepackage{tabularx}
-\usepackage[citestyle=authoryear,bibstyle=nature]{biblatex}
+\usepackage[citestyle=authoryear,bibstyle=numeric]{biblatex}
 \usepackage[pdfencoding=auto]{hyperref}
 \usepackage[danish]{babel}
 \usepackage{wrapfig, lipsum}
