--- a/report/process.tex
+++ b/report/process.tex
@@ -31,6 +31,7 @@ gav os et ekstra overblik. Vi kunne således se hvordan vores backlog havde ænd
     \centering
     \includegraphics[width=1\textwidth]{img/burn-up-chart.png}
     \caption{Burn-up chart}
+    \label{burn-up}
 \end{figure}
 
 Fordelen ved at bruge en burn-up chart frem for burn-down er, at man kan se hvordan backloggen ændrer sig. I et burn-down chart er der kun de resterende point visualiseret. To sprints med samme deltaværdi kan dermed have haft vidt forskellige ændringer i den totale backlog og sprint backloggen. Ved at bruge et burn-up chart er det nemmere at tage højde for, at backloggen ændrer sig i løbet af projektet.
