--- a/report/appendix.tex
+++ b/report/appendix.tex
@@ -94,3 +94,13 @@ Begge farveskemaer er udvalgt af en professionel Creative Lead hos firmaet Unkno
     \item Man kan tilføje og slette rækker og kolonner for at gøre plads til flere eller færre planter
     \item Man kan hive en plantekasse eller potte ned på griddet for at indikere at der er noget her
 \end{itemize}
+
+\subsection{Apps brugt til sammenligning}
+\label{other-apps}
+
+\begin{itemize}
+    \item \cite{gardroid}
+    \item \cite{gleyco}
+    \item \cite{garden-organizer}
+    \item \cite{planter}
+\end{itemize}
