--- a/report/future.tex
+++ b/report/future.tex
@@ -2,6 +2,7 @@
 Gennem projektet nåede vi alt i backloggen, som det også fremgik i vores burn-up chart. Der var dog enkelte ting, vi fjernede fra backloggen undervejs, da det ikke længere var del af vores ønskede mål og omfang for arbejdet frem mod afleveringen --- nogle af disse features kunne dog måske stadig give mening at implementere i et fremtidigt arbejde på appen. Derudover fik vi også nye idéer undervejs, der eventuelt kan give værdi for brugeren i fremtiden.
 
 \subsection{Ikoner til alle planter}
+\label{icons-for-plants}
 Nogle mennesker orienterer sig meget visuelt, og her ville det give god mening, hvis hver enkelt plante havde et ikon knyttet til sig. Da dette kobler sig meget til datagrundlaget, vurderede vi, at det ikke gav mening at bruge tid på at finde hvert enkelt ikon til hver af de planter, vi havde fra vores data. Det ville være oplagt at have data, der allerede havde knyttet et ikon til sig. Alternativt ville det være meget tidskrævende, at finde ikoner samt skalere og farve dem. Det vurderede vi ikke gav mening i forhold til vores nuværende tidsramme, især når der heller ikke var nogen brugertests, der fremhævede manglen. I en fremtidig version af appen, ville det måske give mening at få et samarbejde, der kunne levere alt data herunder ikoner. 
 
 \subsection{Inddeling og gruppering af bede}
