--- a/report/bib.bib
+++ b/report/bib.bib
@@ -117,3 +117,31 @@
     url = {https://developer.android.com/training/data-storage/room/#database},
     urldate = {2021-05-10}
 }
+
+@online {
+    gardroid,
+    title = {Gardroid - Vegetable Garden},
+    url = {https://play.google.com/store/apps/details?id=com.hookah.gardroid.free},
+    urldate = {2021-05-10}
+}
+
+@online {
+    gleyco,
+    title = {My Vegetable Garden GLEYCO},
+    url = {https://play.google.com/store/apps/details?id=gleynuco.com.monpotager},
+    urldate = {2021-05-10}
+}
+
+@online {
+    planter,
+    title = {Planter - Garden Planner},
+    url = {https://play.google.com/store/apps/details?id=com.perculacreative.peter.gardenplanner},
+    urldate = {2021-05-10}
+}
+
+@online {
+    garden-organizer,
+    title = {Garden Organizer: Manager \& Planner},
+    url = {https://play.google.com/store/apps/details?id=azadev.garden.organizer},
+    urldate = {2021-05-10}
+}
