Reflection review - before master merge

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -145,3 +145,10 @@
     url = {https://play.google.com/store/apps/details?id=azadev.garden.organizer},
     urldate = {2021-05-10}
 }
+
+@online {
+    sædskifte,
+    title = {Få styr på dit sædskifte},
+    url = {https://www.havenyt.dk/artikler/dyrkningsmetoder/saedskifte_og_naboplanter/1442.html},
+    urldate = {2021-05-10}
+}
