--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -2,7 +2,7 @@
 \label{refleksion}
 
 \subsection{Indledende forventninger}
-Jævnfør problemformulering fra indledningen, havde vi følgende mål:
+Jævnfør problemformulering fra indledningen, havde vi følgende mål (engelsk):
 
 \begin{itemize}
         \item
@@ -31,7 +31,7 @@ Derudover havde vi internt i gruppen nogle forestillinger om appens fremtidige k
     \item Understøtte planter indenfor, udenfor og i drivhus
     \item Understøtte at plante/så direkte i jorden, i potter eller i plantekasser
     \item Designe sit eget haveområde i appen
-    \item Se historik over vanding og platning
+    \item Se historik over vanding og plantning
     \item Planlægning af en ny sæson
 \end{itemize}
 
@@ -41,7 +41,7 @@ Vi blev dog klogere undervejs og opdagede, at ikke alle disse punkter var gode i
 Her noget om skiftet af fokus fra at appen kan alt til at den viser alt.
 
 \subsection{Appens omfang}
-Her noget om hvilke forvetninger/krav vi opfyldte, og hvilke vi ikke gjorde.
+Her noget om hvilke forventninger/krav vi opfyldte, og hvilke vi ikke gjorde.
 
 \subsubsection{Kalenderintegration og notifikationer}
 Da appens egentlige rolle stod mere klart, gik det også op for os, at kalenderintegration ikke gav meget mening at lave. Da appen ikke skulle holde styr på præcist hvilke handlinger, der skulle udføres hvornår, i hvilke bede og med hvilke planter, er der ikke nogen begivenheder, der kan stå i kalenderen. Hvis kalenderen skulle bruges, skulle der være afsat flere dage i træk til f.eks. at vise, at en plante var i sæson. Det vurderede vi ikke gav værdi for brugeren, da kalenderen som regel bruges til at holde styr på begivenheder eller arbejdsopgaver, man skal på et bestemt tidspunkt. Det er ikke en bogholder for hvornår du måske vil gøre noget.
@@ -49,16 +49,16 @@ Da appens egentlige rolle stod mere klart, gik det også op for os, at kalenderi
 Notifikationer gav stadig mening til en hvis grad, da de ville kunne minde brugeren om at tjekke til deres køkkenhave i ny og næ, ved ønske om sådanne påmindelser. Udfordringen hertil kommer af, at der er dårlig offline support for baggrundsservices på nyere versioner af Android, da de kan dræne ressourcer hele tiden. Dette gav os to muligheder for at få notifikationer ud til brugerne:
 
 \begin{enumerate}
-    \item Lav en uelegant løsning ved at bruge en \texttt{AlarmManager}, som fungerer som "alarm" og checker en gang i døgnet, om der skal sendes en notifikation til brugeren
-    \item Lav en stor opsætning med Firebase eller en anden online service, som vi herfra kan få appen til at være "subscribet" til.
+    \item Lav en uelegant løsning ved at bruge en \texttt{AlarmManager}, som fungerer som ``alarm'' og checker en gang i døgnet, om der skal sendes en notifikation til brugeren
+    \item Lav en stor opsætning med Firebase eller en anden online service, som vi herfra kan få appen til at være ``subscribet'' til.
 \end{enumerate}
 
 Den første løsning ønskede vi ikke at lave, da det ville give en dårlig kodestruktur og misbruge \texttt{AlarmManager}-klassen, og gå imod den tiltænkte brug.
 
-Den anden løsning blev fravalgt, da der skulle meget arbejde til at få server og service sat op, i forhold til hvilken værdi vi vurderede, det ville give for brugeren af appen. Det er overdrevent at gøre appen afhængig af en seperat server med en internet-service af den ene grund, at brugeren skal kunne få notifikationer om sin egen køkkenhave, som ellers ikke kræver internet at bruge.
+Den anden løsning blev fravalgt, da der skulle meget arbejde til at få server og service sat op, i forhold til hvilken værdi vi vurderede, det ville give for brugeren af appen. Det er overdrevent at gøre appen afhængig af en separat server med en internet-service af den ene grund, at brugeren skal kunne få notifikationer om sin egen køkkenhave, som ellers ikke kræver internet at bruge.
 
 \subsubsection{Sædskifteinterval}
-Jævnfør problemformuleringen opfyldte vi dette krav. I forhold til vores egne forvetninger, derimod, blev det implemeteret på en helt anden måde. Det datagrundlag, vi fandt, samt det, vi læste om sædskifte (INDSÆT REFERENCE HER) informerede os om vigtighigheden heraf og hvordan det er forskelligt fra plante til plante. Derfor havde vi først troet, at vi skulle visualisere alle planter i alle bed i forhold til sædskifte. Efter en observation af bruger 1's nuværende måde at holde styr på sædskifte samt en forklarende snak med hende, fandt vi dog frem til, at det giver bedre mening at holde styr på sædskifte på bed-niveau. Man vil som oftest så planter af samme familie i samme bed og rotere hele bede for at undgå udpining af jorden. Derfor ændrede vi vores måde at anskue hele featuren til at give et overblik over hvor længe et bed har været på samme plads, hvor det tidligere har været samt hvornår det igen kan plantes på en tidligere position ifølge den type plante i bedet, der har største sædskifteinterval.
+Jævnfør problemformuleringen opfyldte vi dette krav. I forhold til vores egne forventninger, derimod, blev det implementeret på en helt anden måde. Det datagrundlag, vi fandt, samt det, vi læste om sædskifte\footcite{sædskifte} informerede os om vigtigheden heraf og hvordan det er forskelligt fra plante til plante. Derfor havde vi først troet, at vi skulle visualisere alle planter i alle bed i forhold til sædskifte. Efter en observation af bruger 1's nuværende måde at holde styr på sædskifte samt en forklarende snak med hende, fandt vi dog frem til, at det giver bedre mening at holde styr på sædskifte på bed-niveau. Man vil som oftest så planter af samme familie i samme bed og rotere hele bede for at undgå udpining af jorden. Derfor ændrede vi vores måde at anskue hele featuren til at give et overblik over hvor længe et bed har været på samme plads, hvor det tidligere har været samt hvornår det igen kan plantes på en tidligere position ifølge den type plante i bedet, der har største sædskifteinterval.
 
 \subsubsection{Image analysis}
 \label{image-analysis}
@@ -68,7 +68,7 @@ Vi havde snakket om, at implementere brug af image analysis til at hjælpe bruge
         \item Det kræver at dine planter er vokset nok til at de kan genkendes af en algoritme
 \end{enumerate}
 
-Derefter fik vi idéen fra en bruger, at vi kunne give mulighed for at tage et billede af en frøpose, og vi tænkte i den sammenhæng, at man kunne bruge image analysis til en billede-til-tekst funktion i notesfeltet. Konklusionen hertil blev, at det var for tidskrævende at integrere image analysis for en sådan lille forbedring af brugeroplevelsen, og det er derfor blevet til, at man må udfylde notesfeltet manuelt. 
+Derefter fik vi idéen fra en bruger, at vi kunne give mulighed for at tage et billede af en frøpose, og vi tænkte i den sammenhæng, at man kunne bruge image analysis til en billede-til-tekst funktion i notefeltet. Konklusionen hertil blev, at det var for tidskrævende at integrere image analysis for en sådan lille forbedring af brugeroplevelsen, og det er derfor blevet til, at man må udfylde notefeltet manuelt. 
 
 Image analysis blev derfor ikke relevant for dette projekt.
 
